samples/_failures_safe/1761260421_d6e6a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_216995be.c: In function ‘main’:
./samples/SAFE/__tmp_216995be.c:182:5: error: expected declaration or statement at end of input
  182 |     }
      |     ^
